syntax = "proto3";
package pb;

option go_package = "catalogpb";

service CatalogService {
    rpc CreateBook (CreateBookRequest) returns (CreateBookResponse) {
    }
    rpc GetBookByID (GetBookRequest) returns (GetBookResponse) {
    }
    rpc GetBooksList (GetBooksRequest) returns (GetBooksResponse) {
    }
}

message Book {
    string id = 1;
    string isbn = 2;
    string title = 3;
    string author = 4;
    double price = 5;
}

message CreateBookRequest {
    string isbn = 1;
    string title = 2;
    string author = 3;
    double price = 4;
}

message CreateBookResponse {
    Book book = 1;
}

message GetBookRequest {
    string id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message GetBooksRequest {
}

message GetBooksResponse {
    repeated Book books = 1;
}

